mobile menu overflow fix

--- a/css/styles-home.css
+++ b/css/styles-home.css
@@ -29,7 +29,6 @@ html.lenis {
     -o-font-smoothing: antialiased;
 }
 
-html,
 body {
     overflow-x: hidden !important;
     position: relative;
