--- a/css/styles-ukraine.css
+++ b/css/styles-ukraine.css
@@ -28,7 +28,6 @@ html.lenis {
     -o-font-smoothing: antialiased;
   }
 
-  html,
   body {
     overflow-x: hidden !important;
     position: relative;
